test/parse/strict/bad/valtwice.sol
s SATISFIABLE
v 1 2 3 1 2 3 0
